syntax = "proto3";

option java_package = "com.soulfiremc.grpc.generated";
option java_multiple_files = true;

package soulfire.v1;

import "soulfire/common.proto";

message CredentialsAuthRequest {
  AccountTypeCredentials service = 1;
  optional ProxyProto proxy = 2;
  string payload = 3;
}

message CredentialsAuthResponse {
  MinecraftAccountProto account = 1;
}

message RefreshRequest {
  MinecraftAccountProto account = 1;
  optional ProxyProto proxy = 2;
}

message RefreshResponse {
  MinecraftAccountProto account = 1;
}

service MCAuthService {
  rpc loginCredentials(CredentialsAuthRequest) returns (CredentialsAuthResponse);
  rpc refresh(RefreshRequest) returns (RefreshResponse);
}
